# MicroMixer-1

./: .gitignore  LICENSE  README.md  generate_test.py  pyproject.toml  train.py
checkpoints/v2_hyper_100k/: README.md
checkpoints/v2_hyper_1M/: README.md
checkpoints/v2_hyper_300k/: README.md
checkpoints/v2_hyper_500k/: README.md
src/: config.py  data.py  model.py  tokenizer.py  trainer.py
