[project]
name = "micromixer-1"
version = "0.1.0"
description = "MLP-Mixer based language model"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "datasets",
    "tqdm",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
train = "train:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
